--- a/css/style.css
+++ b/css/style.css
@@ -10,16 +10,11 @@ html {
     font-size: 62.5%;
 }
 
-/* Transitions */
-
 body {
     animation: fade 1s forwards;
 }
 
-.fade {
-    animation-name: fade;
-    animation-duration: 1s;
-}
+/* Transitions */
 
 @keyframes fade {
     from {opacity: 0}
@@ -41,10 +36,6 @@ body {
     height: 9.5rem;
     justify-content: center;
     padding: 6rem 4rem;
-}
-
-.logo {
-    height: 5rem
 }
 
 .main-navig-list {
@@ -495,216 +486,71 @@ body {
 }
 
 /* Media Queries */
-/* Below 1344px: Laptops */
+/* Below 600px: Mobiles */
 
-@media (max-width: 84em) {
+@media (max-width: 37.5em) {
 
-.section-about {
-    background-color: #FFFFFF;
-    padding: 3rem 10rem 10rem 10rem;
+.main-navig-list {
+    flex-direction: column;
+    gap: 3rem;
 }
 
-.step-number {
-    font-size: 6rem;
+.header {
+    padding: 16rem 4rem;
 }
 
-.step-title {
-    font-size: 3rem;
+.index-img {
+    border: 1px solid #000000;
+    border-radius: 30px;
+    width: 90%;
 }
-
-.step-description {
-    font-size: 2rem;
-}
-
-.section-packages {
-    background-color: #FFFFFF;
-    padding: 3rem 10rem 10rem 10rem;
-}
-
-.section-portfolio {
-    background-color: #FFFFFF;
-    padding: 3rem 10rem 10rem 10rem;
-}
-
-.section-cta {
-    background-color: #FFFFFF;
-    padding: 3rem 10rem 10rem 10rem;
-}
-
-}
-
-/* Below 1300px: Laptops */
-
-@media (max-width: 81.25em) {
 
 .primary-heading {
-    font-size: 6rem;
+    font-size: 5.5rem;
 }
-
-.step-number {
-    font-size: 5.3rem;
-}
-
-.step-title {
-    font-size: 2.5rem;
-}
-
-.step-description {
-    font-size: 1.8rem;
-}
-
-.section-packages {
-    background-color: #FFFFFF;
-    padding: 3rem 5rem 5rem 5rem;
-}
-
-.package-attribute {
-    font-size: 1.9rem;
-}
-
-.package-attribute span {
-    font-size: 1.9rem;
-}
-
-.package-information {
-    font-size: 1.9rem;
-}
-
-.package-name {
-    font-size: 2.6rem;
-}
-
-.package-additional {
-    font-size: 1.9rem;
-}
-
-.package-additional span {
-    font-size: 1.9rem;
-}
-
-
-}
-
-/* Below 1200px: Tablets */
-
-@media (max-width: 75em) {
-
-.primary-heading {
-    font-size: 5.3rem;
-}
-
-.step-number {
-    font-size: 4.5rem;
-}
-
-.step-title {
-    font-size: 2.3rem;
-}
-
-.step-description {
-    font-size: 1.7rem;
-}
-
-.section-packages {
-    background-color: #FFFFFF;
-    padding: 3rem 1rem 1rem 1rem;
-}
-
-.package-name {
-    font-size: 2.5rem;
-}
-
-.package-attribute {
-    font-size: 1.8rem;
-}
-
-.package-attribute span {
-    font-size: 1.8rem;
-}
-
-.package-information {
-    font-size: 1.3rem;
-}
-
-.package-additional {
-    font-size: 1.8rem;
-}
-
-.package-additional span {
-    font-size: 1.8rem;
-}
-
-.package-conditions {
-    margin-bottom: 5rem;
-}
-
-.section-portfolio {
-    background-color: #FFFFFF;
-    padding: 3rem 4rem 4rem 4rem;
-}
-
-.section-cta {
-    background-color: #FFFFFF;
-    padding: 3rem 4rem 4rem 4rem;
-}
-}
-
-/* Below 1080px: Tablets */
-
-@media (max-width: 67.5em) {
 
 .about {
     grid-template-columns: 1fr;
     text-align: center;
+    padding: 11rem 6rem;
 }
 
 .step-number {
-    font-size: 3.5rem;
+    font-size: 4rem;
 }
 
 .step-title {
-    font-size: 2.3rem;
+    font-size: 3rem
 }
 
 .step-description {
-    font-size: 2rem;
-}
-
-.step-img {
-    width: 80%;
-}
-
-.section-packages {
-    padding: 3rem 3rem 3rem 3rem;
+    font-size: 1.8rem;
 }
 
 .package {
     grid-template-columns: 1fr;
+    padding: 11rem 6rem;
 }
 
-.package-name {
-    font-size: 4rem;
+.package-conditions {
+    padding-left: 6rem;
+    padding-right: 6rem;
 }
 
-.package-attribute {
-    font-size: 2.3rem;
+.portfolio {
+    grid-template-columns: 1fr;
+    padding: 11rem 6rem;
 }
 
-.package-attribute span {
-    font-size: 2.3rem;
+.cta {
+    padding: 11rem 6rem;
 }
 
-.package-additional {
-    font-size: 2rem;
+.contact {
+    grid-template-columns: 1fr;
 }
 
-.package-additional span {
-    font-size: 2rem;
+.cta-img-box {
+    display: none;
 }
-
 }
-
-/* Need To Add Another Query Between Tablets & Smartphones */
-
-/* Below 544px: Smartphones */
-
