--- a/css/style.css
+++ b/css/style.css
@@ -506,43 +506,53 @@ body {
 }
 
 .primary-heading {
-    font-size: 5.5rem;
+    font-size: 3rem;
 }
 
 .about {
     grid-template-columns: 1fr;
     text-align: center;
-    padding: 11rem 6rem;
 }
 
 .step-number {
-    font-size: 4rem;
+    font-size: 3rem;
 }
 
 .step-title {
-    font-size: 3rem
+    font-size: 2rem
 }
 
 .step-description {
-    font-size: 1.8rem;
+    font-size: 1.6rem;
 }
 
 .package {
     grid-template-columns: 1fr;
-    padding: 11rem 6rem;
+    text-align: center;
 }
 
-.package-conditions {
-    padding-left: 6rem;
-    padding-right: 6rem;
+.package-name {
+    font-size: 2rem;
+}
+
+.package-price {
+    font-size: 3.5rem;
+}
+
+.package-attribute, .package-attribute span {
+    font-size: 1.5rem;
+}
+
+.package-conditions, .package-conditions span {
+    font-size: 1.5rem;
+}
+
+.fa-fire-flame-simple, .fa-fire-flame-curved, .fa-fire {
+    font-size: 3.5rem;
 }
 
 .portfolio {
     grid-template-columns: 1fr;
-    padding: 11rem 6rem;
-}
-
-.cta {
     padding: 11rem 6rem;
 }
 
