--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@ body {
     animation: fade 1s forwards;
 }
 
+:focus {
+    outline: none;
+    border: none;
+}
+
 /* Transitions */
 
 @keyframes fade {
@@ -50,13 +55,13 @@ body {
     color: #000000;
     font-family: "Zalando Sans Expanded", sans-serif;
     font-size: 1.5rem;
-    font-weight: 500;
+    font-weight: 300;
     text-decoration: none;
     transition: all 0.3s;
 }
 
 .main-navig-link:hover, .main-navig-link:active {
-    transform: translateY(-5px);
+    font-weight: 600;
 }
 
 .main-navig-link.navig-cta:link, .main-navig-link.navig-cta:visited {
@@ -67,38 +72,68 @@ body {
 }
 
 .main-navig-link.navig-cta:hover, .main-navig-link.navig-cta:active {
-    border: 1px solid #FFFFFF;
     background-color: #000000;
     color: #FFFFFF;
+    font-weight: 300;
     transform: none;
 }
 
 /* Index Section */
 
 .section-index {
-    background-color: #FFFFFF;
+    background-color: #000000;
     padding: 11rem 0 10rem 0;
 }
 
 .index {
     align-items: center;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 5rem;
     justify-content: center;
     max-width: 130rem;
     margin: 0 auto;
     padding: 2rem 3rem;
 }
 
+.index-text-box {
+    text-align: center;
+}
+
+.index-text {
+    color: #FFFFFF;
+    font-family: "Zalando Sans Expanded", sans-serif;
+    font-size: 2.3rem;
+    font-weight: 200;
+}
+
+.index-text-lower {
+    color: #666666;
+    margin-bottom: 5rem;
+}
+
+.index-heading {
+    color: #FFFFFF;
+    font-family: "Zalando Sans Expanded", sans-serif;
+    font-size: 10rem;
+    font-weight: 700;
+}
+
 .index-img {
+    /* border: 1px solid #000000;
+    border-radius: 70px; */
+    width: 100%;
+}
+
+.btn-index {
     border: 1px solid #000000;
-    border-radius: 70px;
-    width: 80%;
+    background-color: #FFFFFF;
 }
 
 /* About Section */
 
 .section-about {
-    background-color: #FFFFFF;
+    background-color: #000000;
     padding: 3rem 0 10rem 0;
 }
 
@@ -108,7 +143,20 @@ body {
     padding: 0 3.3rem;
 }
 
+.about-text {
+    color: #FFFFFF;
+    font-family: "Zalando Sans Expanded", sans-serif;
+    font-size: 2rem;
+    font-weight: 200;
+    text-align: center;
+}
+
+.about-text span {
+    font-weight: 600;
+}
+
 .primary-heading {
+    color: #FFFFFF;
     font-family: "Zalando Sans Expanded", sans-serif;
     font-size: 7rem;
     font-weight: 700;
@@ -148,27 +196,27 @@ body {
 }
 
 .step-title-one, .step-number-one {
-    color: #323BB6;
+    color: #2237B3;
 }
 
 .step-title-two, .step-number-two {
-    color: #F34141;
+    color: #FF3737;
 }
 
 .step-title-three, .step-number-three {
-    color: #349834;
+    color: #36B025;
 }
 
 .step-description {
-    color: #000000;
+    color: #FFFFFF;
     font-family: "Zalando Sans Expanded", sans-serif;
     font-size: 2rem;
-    font-weight: 400;
+    font-weight: 200;
     line-height: 1.3;
 }
 
 .description-link {
-    color: #000000;
+    color: #FFFFFF;
     font-weight: 600;
     text-decoration: none;
 }
@@ -187,7 +235,7 @@ body {
 /* Packages Section */
 
 .section-packages {
-    background-color: #FFFFFF;
+    background-color: #000000;
     padding: 3rem 0 10rem 0;
 }
 
@@ -201,9 +249,22 @@ body {
     padding: 11rem 3rem;
 }
 
+.packages-text {
+    color: #FFFFFF;
+    font-family: "Zalando Sans Expanded", sans-serif;
+    font-size: 2rem;
+    font-weight: 200;
+    text-align: center;
+}
+
+.packages-text span {
+    font-weight: 600;
+}
+
+
 .package-plan {
-    border: 1px solid #000000;
-    background-color: #FFFFFF;
+    border: 1px solid #FFFFFF;
+    background-color: #000000;
     padding: 5rem;
     width: 100%;
     text-align: center;
@@ -215,21 +276,20 @@ body {
 }
 
 .package-name {
-    color: #000000;
+    color: #FFFFFF;
     font-size: 4rem;
-    font-weight: 500;
-    margin-bottom: 1rem;
+    font-weight: 600;
 }
 
 .package-price {
-    color: #000000;
+    color: #FFFFFF;
     font-size: 10rem;
-    font-weight: 700;
+    font-weight: 600;
     margin-bottom: 1.5rem;
 }
 
 .fa-fire-flame-simple, .fa-fire-flame-curved, .fa-fire {
-    color: #000000;
+    color: #FFFFFF;
     font-size: 4.5rem;
     margin-bottom: 3rem;
 }
@@ -249,27 +309,26 @@ body {
 }
 
 .package-attribute {
-    color: #000000;
+    color: #FFFFFF;
     display: flex;
     font-family: "Zalando Sans Expanded", sans-serif;
-    font-size: 1.8rem;
-    font-weight: 300;
+    font-size: 1.6rem;
+    font-weight: 200;
     gap: 0.6rem;
-    line-height: 0.8;
+    line-height: 0.3;
 }
 
 .package-attribute span {
     font-family: "Zalando Sans Expanded", sans-serif;
     font-weight: 600;
-    font-size: 1.8rem;
+    font-size: 1.6rem;
 }
 
 .btn, .btn:link, .btn:visited {
-    border: none;
     cursor: pointer;
     font-family: "Zalando Sans Expanded", sans-serif;
     font-size: 1.6rem;
-    font-weight: 500;
+    font-weight: 300;
     padding: 1.5rem;
     text-decoration: none;
     transition: all 0.3s;
@@ -283,7 +342,6 @@ body {
 
 .btn-full:hover, .btn-full:active {
     background-color: #000000;
-    border: 1px solid #FFFFFF;
     color: #FFFFFF;
 }
 
@@ -296,7 +354,12 @@ body {
 .btn-outline:hover, .btn-outline:active {
     background-color: #000000;
     border: 1px solid #000000;
-    color: #FCFFA2;
+    color: #FFFFFF;
+}
+
+.btn-index:hover, .btn-index:active {
+    background: #000000;
+    color: #FFFFFF;
 }
 
 .package-sign-up {
@@ -305,10 +368,10 @@ body {
 }
 
 .package-information {
-    color: #000000;
+    color: #FFFFFF;
     font-family: "Zalando Sans Expanded", sans-serif;
     font-weight: 200;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     margin-top: 5rem;
     margin-bottom: 3rem;
     text-align: center;
@@ -317,42 +380,55 @@ body {
 .package-information span {
     font-family: "Zalando Sans Expanded", sans-serif;
     font-weight: 600;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
 }
 
 .package-conditions {
-    color: #000000;
+    color: #FFFFFF;
     font-family: "Zalando Sans Expanded", sans-serif;
     font-weight: 200;
-    font-size: 1.8rem;
+    font-size: 2rem;
     text-align: center;
 }
 
 .package-conditions span {
     font-family: "Zalando Sans Expanded", sans-serif;
     font-weight: 500;
-    font-size: 1.8rem;
+    font-size: 2rem;
 }
 
 /* Portfolio Section */
 
 .section-portfolio {
-    background-color: #FFFFFF;
+    background-color: #000000;
     padding: 3rem 0 10rem 0;
 }
 
 .portfolio {
     align-items: center;
     display: grid;  
-    gap: 2rem;
+    gap: 3rem;
     grid-template-columns: 1fr 1fr 1fr;
     max-width: 130rem;
     margin: 0 auto;
     padding: 11rem 3rem;
 }
 
+.portfolio-text {
+    color: #FFFFFF;
+    font-family: "Zalando Sans Expanded", sans-serif;
+    font-size: 2rem;
+    font-weight: 200;
+    text-align: center;
+}
+
+.portfolio-text span {
+    font-weight: 600;
+}
+
+
 .portfolio-img {
-    border: 1px solid #000000;
+    border: 1px solid #FFFFFF;
     cursor: pointer;
     width: 100%;
 }
@@ -360,7 +436,7 @@ body {
 /* CTA Section */
 
 .section-cta {
-    background-color: #FFFFFF;
+    background-color: #000000;
     padding: 3rem 0 10rem 0;
 }
 
@@ -370,9 +446,21 @@ body {
     padding: 11rem 3rem;
 }
 
+.cta-text {
+    color: #FFFFFF;
+    font-family: "Zalando Sans Expanded", sans-serif;
+    font-size: 2rem;
+    font-weight: 200;
+    text-align: center;
+}
+
+.cta-text span {
+    font-weight: 600;
+}
+
 .contact {
-    border: 1px solid #000000;
-    background-color: #FFFFFF;
+    border: 1px solid #FFFFFF;
+    background-color: #000000;
     display: grid;
     grid-template-columns: 1fr 1fr;
     height: 68rem;
@@ -381,7 +469,7 @@ body {
 }
 
 .cta-heading {
-    color: #000000;
+    color: #FFFFFF;
     font-family: "Zalando Sans Expanded", sans-serif;
     font-size: 4rem;
     font-weight: 700;
@@ -390,14 +478,6 @@ body {
 
 .cta-text-box {
     padding: 4.8rem 6.4rem 6.4rem 6.4rem;
-}
-
-.cta-text {
-    color: #000000;
-    font-family: "Zalando Sans Expanded", sans-serif;
-    font-size: 4rem;
-    font-weight: 200;
-    margin-bottom: 3rem;
 }
 
 .cta-form {
@@ -409,7 +489,7 @@ body {
 }
 
 .cta-form label {
-    color: #000000;
+    color: #FFFFFF;
     display: block;
     font-family: "Zalando Sans Expanded", sans-serif;
     font-size: 1.5rem;
@@ -447,7 +527,6 @@ body {
 }
 
 .btn-form:hover, .btn-form:active {
-    border: 1px solid #FFFFFF;
     background-color: #000000;
     color: #FFFFFF;
 }
@@ -455,8 +534,8 @@ body {
 /* Footer Section */
 
 .section-footer {
-    border-top: 1px solid #000000;
-    background-color: #000000;
+    border-top: 1px solid #FFFFFF;
+    background-color: #FFFFFF;
     overflow: hidden;
     padding: 3rem 0 0 0;
 }
@@ -475,7 +554,7 @@ body {
 
 .platform-link:link, .platform-link:visited {
     animation: move 20s linear infinite;
-    color: #FFFFFF;
+    color: #000000;
     display: block;
     font-family: "Zalando Sans Expanded", sans-serif;
     font-size: 1.7rem;
@@ -499,19 +578,37 @@ body {
     padding: 16rem 4rem;
 }
 
+.index {
+    grid-template-columns: 1fr;
+}
+
+.index-text, .index-text-lower {
+    font-size: 2rem;
+}
+
+.index-heading {
+    font-size: 7rem;
+}
+
 .index-img {
-    border: 1px solid #000000;
-    border-radius: 30px;
-    width: 90%;
+    width: 100%;
 }
 
 .primary-heading {
-    font-size: 3rem;
+    font-size: 3.3rem;
 }
 
 .about {
     grid-template-columns: 1fr;
     text-align: center;
+}
+
+.about-text {
+    font-size: 1.6rem;
+}
+
+.about-text span {
+    font-size: 1.6rem;
 }
 
 .step-number {
@@ -531,37 +628,58 @@ body {
     text-align: center;
 }
 
+.packages-text, .packages-text span {
+    font-size: 1.6rem;
+}
+
 .package-name {
-    font-size: 2rem;
+    font-size: 3.3rem;
 }
 
 .package-price {
-    font-size: 3.5rem;
+    font-size: 6rem;
 }
 
 .package-attribute, .package-attribute span {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
+}
+
+.package-additional {
+    font-size: 1.6rem;
 }
 
 .package-conditions, .package-conditions span {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
 }
 
-.package-conditions {
-    padding: 3rem;
-}
 
-.fa-fire-flame-simple, .fa-fire-flame-curved, .fa-fire {
+/* .fa-fire-flame-simple, .fa-fire-flame-curved, .fa-fire {
     font-size: 3.5rem;
-}
+} */
 
 .portfolio {
     grid-template-columns: 1fr;
     padding: 11rem 6rem;
 }
 
+.portfolio-text, .portfolio-text span {
+    font-size: 1.6rem;
+}
+
 .contact {
     grid-template-columns: 1fr;
+}
+
+.cta-text, .cta-text span {
+    font-size: 1.6rem;
+}
+
+.cta-form textarea {
+    height: 30rem;
+}
+
+.contact {
+    height: 85rem;
 }
 
 .cta-img-box {
