--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,30 @@ body {
     transform: none;
 }
 
+/* Countdown Section */
+
+.section-countdown {
+    background-color: #000000;
+    padding: 11rem 0 81rem 0;
+}
+
+.countdown-heading {
+    color: #FFFFFF;
+    font-family: "Zalando Sans Expanded", sans-serif;
+    font-size: 5rem;
+    font-weight: 600;
+    margin-top: 25rem;
+    text-align: center;
+}
+
+#countdown {
+    color: #FFFFFF;
+    font-family: "Zalando Sans Expanded", sans-serif;
+    font-size: 5rem;
+    font-weight: 200;
+    text-align: center;
+}
+
 /* Index Section */
 
 .section-index {
@@ -120,14 +144,13 @@ body {
 }
 
 .index-img {
-    /* border: 1px solid #000000;
-    border-radius: 70px; */
     width: 100%;
 }
 
 .btn-index {
     border: 1px solid #000000;
     background-color: #FFFFFF;
+    color: #000000;
 }
 
 /* About Section */
@@ -500,6 +523,7 @@ body {
 .cta-form input, .cta-form select, .cta-form textarea {
     appearance: none;
     border: 1px solid #000000;
+    color: #000000;
     font-family: "Zalando Sans Expanded", sans-serif;
     font-size: 1.3rem;
     padding: 1.5rem;
